// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`documentToReactComponents does not render unrecognized marks 1`] = `
[
  <p>
    Hello world!
  </p>,
]
`;

exports[`documentToReactComponents renders asset hyperlink 1`] = `
[
  <p>
    
    <span>
      type: 
      asset-hyperlink
       id: 
      9mpxT4zsRi6Iwukey8KeM
    </span>
    
  </p>,
]
`;

exports[`documentToReactComponents renders blockquotes 1`] = `
[
  <p>
    hello
  </p>,
  <blockquote>
    world
  </blockquote>,
]
`;

exports[`documentToReactComponents renders default entry link block 1`] = `
[
  <div />,
]
`;

exports[`documentToReactComponents renders default resource block 1`] = `
[
  <div />,
]
`;

exports[`documentToReactComponents renders embedded entry 1`] = `
[
  <p>
    
    <span>
      type: 
      embedded-entry-inline
       id: 
      9mpxT4zsRi6Iwukey8KeM
    </span>
    
  </p>,
]
`;

exports[`documentToReactComponents renders embedded resource 1`] = `
[
  <p>
    
    <span>
      type: 
      embedded-resource-inline
       urn: 
      crn:contentful:::content:spaces/6fqi4ljzyr0e/environments/master/entries/9mpxT4zsRi6Iwukey8KeM
    </span>
    
  </p>,
]
`;

exports[`documentToReactComponents renders empty node if type is not recognized 1`] = `
[
  <React.Fragment>
    Hello world!
  </React.Fragment>,
]
`;

exports[`documentToReactComponents renders entry hyperlink 1`] = `
[
  <p>
    
    <span>
      type: 
      entry-hyperlink
       id: 
      9mpxT4zsRi6Iwukey8KeM
    </span>
    
  </p>,
]
`;

exports[`documentToReactComponents renders horizontal rule 1`] = `
[
  <p>
    hello world
  </p>,
  <hr />,
  <p>
    
  </p>,
]
`;

exports[`documentToReactComponents renders hyperlink 1`] = `
[
  <p>
    Some text 
    <a
      href="https://url.org"
    >
      link
    </a>
     text.
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 1`] = `
[
  <p>
    <i>
      hello world
    </i>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 2`] = `
[
  <p>
    <b>
      hello world
    </b>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 3`] = `
[
  <p>
    <u>
      hello world
    </u>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 4`] = `
[
  <p>
    <code>
      hello world
    </code>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 5`] = `
[
  <p>
    <sup>
      hello world
    </sup>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 6`] = `
[
  <p>
    <sub>
      hello world
    </sub>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 7`] = `
[
  <p>
    <s>
      hello world
    </s>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with default mark renderer 8`] = `
[
  <p>
    <em>
      hello world
    </em>
  </p>,
]
`;

exports[`documentToReactComponents renders marks with the passed custom mark renderer 1`] = `
[
  <p>
    <i>
      <Strong>
        hello world
      </Strong>
    </i>
  </p>,
]
`;

exports[`documentToReactComponents renders multiple marks with default mark renderer 1`] = `
[
  <p>
    <i>
      <b>
        hello world
      </b>
    </i>
  </p>,
]
`;

exports[`documentToReactComponents renders nodes with default node renderer 1`] = `
[
  <p>
    hello world
  </p>,
]
`;

exports[`documentToReactComponents renders nodes with default node renderer 2`] = `
[
  <h1>
    hello world
  </h1>,
]
`;

exports[`documentToReactComponents renders nodes with default node renderer 3`] = `
[
  <h2>
    hello world
  </h2>,
]
`;

exports[`documentToReactComponents renders nodes with default node renderer 4`] = `
[
  <h3>
    hello world
  </h3>,
]
`;

exports[`documentToReactComponents renders nodes with default node renderer 5`] = `
[
  <h4>
    hello world
  </h4>,
]
`;

exports[`documentToReactComponents renders nodes with default node renderer 6`] = `
[
  <h5>
    hello world
  </h5>,
]
`;

exports[`documentToReactComponents renders nodes with default node renderer 7`] = `
[
  <h6>
    hello world
  </h6>,
]
`;

exports[`documentToReactComponents renders nodes with passed custom node renderer 1`] = `
<Document>
  <Paragraph>
    hello
  </Paragraph>
  <blockquote>
    world
  </blockquote>
</Document>
`;

exports[`documentToReactComponents renders ordered lists 1`] = `
[
  <ol>
    <li>
      <p>
        Hello
      </p>
    </li>
    <li>
      <p>
        world
      </p>
    </li>
  </ol>,
  <p>
    
  </p>,
]
`;

exports[`documentToReactComponents renders resource hyperlink 1`] = `
[
  <p>
    
    <span>
      type: 
      resource-hyperlink
       urn: 
      crn:contentful:::content:spaces/6fqi4ljzyr0e/environments/master/entries/9mpxT4zsRi6Iwukey8KeM
    </span>
    
  </p>,
]
`;

exports[`documentToReactComponents renders tables 1`] = `
[
  <table>
    <tbody>
      <tr>
        <td>
          <p>
            A 1
          </p>
        </td>
        <td>
          <p>
            B 1
          </p>
        </td>
      </tr>
      <tr>
        <td>
          <p>
            A 2
          </p>
        </td>
        <td>
          <p>
            B 2
          </p>
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`documentToReactComponents renders tables with header 1`] = `
[
  <table>
    <tbody>
      <tr>
        <th>
          <p>
            A 1
          </p>
        </th>
        <th>
          <p>
            B 1
          </p>
        </th>
      </tr>
      <tr>
        <td>
          <p>
            A 2
          </p>
        </td>
        <td>
          <p>
            B 2
          </p>
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`documentToReactComponents renders text with the passed custom text renderer 1`] = `
[
  <p>
    hello Earth
  </p>,
]
`;

exports[`documentToReactComponents renders unaltered text with default text renderer 1`] = `
[
  <p>
    hello world
  </p>,
]
`;

exports[`documentToReactComponents renders unordered lists 1`] = `
[
  <ul>
    <li>
      <p>
        Hello
      </p>
    </li>
    <li>
      <p>
        world
      </p>
    </li>
  </ul>,
  <p>
    
  </p>,
]
`;

exports[`documentToReactComponents returns an array of elements when given a populated document 1`] = `
[
  <p>
    hello world
  </p>,
  <hr />,
  <p>
    
  </p>,
]
`;

exports[`nodeListToReactComponents renders children as an array with keys from its index 1`] = `
[
  <p>
    <b>
      hello
    </b>
  </p>,
  " ",
  <p>
    world
  </p>,
]
`;

exports[`nodeToReactComponent does not add additional tags on invalid marks 1`] = `"hello world"`;

exports[`nodeToReactComponent does not render altered text with default text renderer 1`] = `
<p>
  <b>
    some
lines
of
text
  </b>
</p>
`;

exports[`nodeToReactComponent renders altered text with custom text renderer 1`] = `
<p>
  <b>
    some
    <br />
    lines
    <br />
    of
    <br />
    text
  </b>
</p>
`;

exports[`nodeToReactComponent renders invalid node types in React fragments 1`] = `
<React.Fragment>
  hello world
</React.Fragment>
`;

exports[`nodeToReactComponent renders valid marks 1`] = `
<b>
  hello world
</b>
`;

exports[`nodeToReactComponent renders valid nodes 1`] = `
<p>
  hello world
</p>
`;

exports[`preserveWhitespace preserves new lines 1`] = `
[
  <p>
    hello
    <br />
    world
  </p>,
]
`;

exports[`preserveWhitespace preserves spaces between words 1`] = `
[
  <p>
    hello    world
  </p>,
]
`;
